[tool.poetry]
name = "tfprovider"
version = "0.1.0"
description = "Implement Terraform providers in Python"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/tfprovider-python/"
repository = "https://gitlab.com/smheidrich/tfprovider-python"
documentation = "https://smheidrich.gitlab.io/tfprovider-python/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-health-checking = "^1.59.0"
cryptography = "^41.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-parametrization = "^2022.2.1"
black = "^23.7.0"

#[tool.poetry.group.doc.dependencies]
#sphinx = "^7.1.2"
#insipid-sphinx-theme = "^0.4.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0,<2"]
build-backend = "poetry.core.masonry.api"
