[tool.poetry]
name = "tfprovider"
version = "0.1.1"
description = "Implement Terraform providers in Python"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]
readme = "README.md"
homepage = "https://smheidrich.gitlab.io/tfprovider-python/"
repository = "https://gitlab.com/smheidrich/tfprovider-python"
documentation = "https://smheidrich.gitlab.io/tfprovider-python/"
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.59.0"
grpcio-health-checking = "^1.59.0"
cryptography = "^41.0.4"
msgpack = "^1.0.7"
tfplugin-proto-all = "^0.1.0"
hc-go-plugin-server = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest-parametrization = "^2022.2.1"
black = "^23.7.0"
types-protobuf = "^4.24.0.4"
msgpack-types = "^0.2.0"
grpc-stubs = "^1.53.0.3"
unasync = "^0.5.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core>=1.0.0,<2"]
build-backend = "poetry.core.masonry.api"
